kubernetes/ingress_service.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
spec:
  rules:
  - host: example.com
    http:
      paths:
        ################
        # URL ROUTING #
        ################
        - path: /
          pathType: Prefix
          backend:
            service:
              name: django-service
              port:
                number: 8010
